# bay

./: .typos.toml  Cargo.toml  README.md  build.sh  codebase-summary.md  pnpm-lock.yaml
bundle/linux/desktop/usr/share/applications/: fig.desktop
crates/alacritty_terminal/: Cargo.toml
crates/fig_desktop/: Cargo.toml  tauri.conf.json
crates/fig_desktop/fuzz/: Cargo.toml
crates/fig_desktop/src/: install.rs  main.rs
crates/fig_desktop/src/platform/: mod.rs
crates/fig_desktop/src/platform/linux/: caret.rs  ibus.rs  mod.rs
crates/fig_desktop/src/remote_ipc/: mod.rs
crates/fig_desktop/src/webview/: mod.rs
crates/fig_desktop_api/: Cargo.toml
crates/fig_diagnostic/: Cargo.toml
crates/fig_install/: Cargo.toml
crates/fig_install/src/: common.rs  index.rs  macos.rs
crates/fig_integrations/src/: desktop_entry.rs  error.rs
crates/fig_integrations/src/intellij/: macos.rs
crates/fig_integrations/src/shell/: mod.rs
crates/fig_integrations/src/vscode/: mod.rs
crates/fig_ipc/: Cargo.toml
crates/fig_log/: Cargo.toml
crates/fig_proto/: Cargo.toml
crates/fig_remote_ipc/: Cargo.toml
crates/fig_settings/: Cargo.toml
crates/fig_test_utils/: Cargo.toml
crates/fig_util/src/: consts.rs  directories.rs  terminal.rs
crates/figterm/: Cargo.toml
crates/q_cli/: Cargo.toml
crates/q_cli/src/cli/doctor/: mod.rs
tests/figterm2/: Cargo.toml
