[package]
name = "fig_diagnostic"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fig_os_shim.workspace = true
fig_util.workspace = true
serde.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
whoami.workspace = true
